// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Must show the title right 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle Send title to product Card  1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card
  </span>
</div>
`;
